<resources>
    <string name="app_name">CrudFilmApps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="email">Username</string>
    <string name="address">Address</string>
    <string name="age">Age</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot password</string>
    <string name="skip">Skip</string>
    <string name="akufilm">AkuFilm</string>
    <string name="can_t_login">Username / Password salah</string>
    <string name="image">image</string>
    <string name="film_name">film name</string>
    <string name="director">Director</string>
    <string name="search">search</string>
    <string name="add_film">Add Film</string>
    <string name="description">Description</string>
    <string name="upload">upload</string>
</resources>