<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_register"
    tools:context=".fragment.FragmentRegister">

    <ImageView
        android:id="@+id/ivBackToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        android:layout_margin="25dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"/>

    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="Create Account"
        android:textColor="@color/primary_white"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="30sp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="70dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toBottomOf="@+id/ivBackToLogin" />

    <LinearLayout
        android:id="@+id/llEtRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="35dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCreateAccount">

        <EditText
            android:id="@+id/etRegisterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textSize="15sp"
            android:inputType="text"
            android:textColorHint="@color/primary_white"
            android:textColor="@color/primary_white"
            android:fontFamily="@font/poppins_semibold"
            android:backgroundTint="@color/primary_white"/>

        <EditText
            android:id="@+id/etRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/primary_white"
            android:textColor="@color/primary_white"
            android:fontFamily="@font/poppins_semibold"
            android:backgroundTint="@color/primary_white"/>

        <EditText
            android:id="@+id/etRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:inputType="textPassword"
            android:textColorHint="@color/primary_white"
            android:textColor="@color/primary_white"
            android:fontFamily="@font/poppins_semibold"
            android:backgroundTint="@color/primary_white"/>

        <EditText
            android:id="@+id/etRegisterConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:inputType="textPassword"
            android:textColorHint="@color/primary_white"
            android:textColor="@color/primary_white"
            android:fontFamily="@font/poppins_semibold"
            android:backgroundTint="@color/primary_white"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign up"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llEtRegister"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llEtRegister"
        app:layout_constraintLeft_toRightOf="@+id/tvSignUp"
        app:layout_constraintHorizontal_bias="1"/>



</androidx.constraintlayout.widget.ConstraintLayout>